--- a/style.css
+++ b/style.css
@@ -2,17 +2,14 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-}
-
-
-p {
-    background-color: darkgray;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 .top-bar {
     background: lightseagreen;
     height: 50px;
     padding: 10px;
+    margin-bottom: 15px;
 }
 
 .top-bar-item-container {
@@ -46,4 +43,18 @@ p {
     border-radius: 40px;
 }
 
+.side-menu {
+    background-color: #f0ecec;
+    width: 300px;
+}
+
+.side-menu p {
+    display: block;
+    border: 1px solid black;
+}
+
+.side-menu-item {
+    padding: 5px 15px;
+    margin-bottom: 10px;
+}
     
