Layout for nav and main content using flexbox

--- a/style.css
+++ b/style.css
@@ -10,12 +10,15 @@
     height: 50px;
     padding: 10px;
     margin-bottom: 15px;
+    display: flex;
+    justify-content: center;
 }
 
 .top-bar-item-container {
     width: 900px;
     height: 100%;
-    margin: 0 auto;
+    display: flex;
+    justify-content: space-between;
 }
 
 .top-bar button {
@@ -41,6 +44,19 @@
 .top-bar button:hover  {
     background-color: rgb(43, 83, 81);
     border-radius: 40px;
+}
+
+.main-page-container {
+    display: flex;
+    justify-content: center;
+    
+}
+
+.main-page {
+    width: 900px;
+    display: flex;
+    justify-content: flex-start;
+    background-color: rgb(209, 212, 214);
 }
 
 .side-menu {
