--- a/style.css
+++ b/style.css
@@ -5,6 +5,10 @@
     font-family: Arial, Helvetica, sans-serif;
 }
 
+body {
+    background-color: rgb(234, 235, 238);
+}
+
 .top-bar {
     background: lightseagreen;
     height: 50px;
@@ -15,7 +19,6 @@
 }
 
 .top-bar-item-container {
-    width: 900px;
     height: 100%;
     display: flex;
     justify-content: space-between;
@@ -24,15 +27,13 @@
 .top-bar button {
     -webkit-appearance: none;
     -moz-appearance: none;
-    display: block;
-    float:left;
+    /* display: block; */
     color: rgb(255, 255, 255);
     background-color: lightseagreen;
     border: none;
     border-radius: 30px;
     margin: .2em .5em;
     padding: .2em;
-    width: 5%;
 }
 
 .top-search-bar {
@@ -54,14 +55,17 @@
 
 .main-page {
     width: 900px;
+    height: 1000px;
     display: flex;
     justify-content: flex-start;
     background-color: rgb(209, 212, 214);
+    box-shadow:rgb(209, 212, 214);
 }
 
 .side-menu {
     background-color: #f0ecec;
     width: 300px;
+    height: 100%;
 }
 
 .side-menu p {
@@ -74,3 +78,7 @@
     margin-bottom: 10px;
 }
     
+.project-tasks li {
+    padding: 10px;
+    margin-bottom: 15px;
+}
